# warde

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yml
src/combined_robot_description/: CMakeLists.txt  package.xml
src/combined_robot_description/launch/: gazebo_combined.launch (copy).py  gazebo_combined.launch.py  gazebo_combined2.launch.py  gazebo_combined_gripper.launch (copy).py  gazebo_combined_gripper.launch.py  view_combined.launch.py
src/combined_robot_description/urdf/: bmw_ur5_combined.urdf (copy).xacro  bmw_ur5_combined2.urdf.xacro  bmw_ur5_gripper_combined.urdf.xacro
src/spawn_tools/: CMakeLists.txt  package.xml
src/spawn_tools/include/spawn_tools/: beer_spawner.h  box_spawner.h
src/spawn_tools/models/drop_box/: model.sdf
src/spawn_tools/src/: beer_spawner.cpp  box_spawner.cpp
src/spawn_tools/srv/: SpawnBeer.srv  SpawnBox.srv
src/warde_bt/: CMakeLists.txt  package.xml
src/warde_bt/config/: graspbeer.xml  placebeer.xml  test_conditions.xml  utopia_warde.xml  warde_tree.xml
src/warde_bt/include/warde_bt/: action_get_closest_beer.h  action_manipulate.h  action_navigate.h  condition_beer_present.h  condition_box_present.h
src/warde_bt/launch/: launch_all.launch.py
src/warde_bt/src/: action_get_closest_beer.cpp  action_manipulate.cpp  action_navigate.cpp  condition_beer_present.cpp  condition_box_present.cpp  test_condition.cpp  warde_bt_main.cpp
